--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,4 +1,4 @@
-.loginpage-bgimage {
+.loginPage-bgImage {
   background: url("../images/background-image.jpg");
   height: 96vh;
   background-repeat: no-repeat;
